--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       context: .
       args:
         NEXT_PUBLIC_API_URL: http://localhost:8080/api
+    container_name: yadah-app
     env_file:
       - .env
     ports:
