--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - mongo_data:/data/db
     healthcheck:
-      test:
-        ["CMD-SHELL", 'mongosh --eval ''db.adminCommand("ping")'' || exit 1']
+      # Using CMD is generally more reliable than CMD-SHELL with complex quotes
+      test: ["CMD", "mongosh", "--quiet", "--eval", "db.adminCommand('ping')"]
       interval: 10s
       timeout: 5s
       retries: 10
@@ -30,6 +30,12 @@ services:
     depends_on:
       mongo:
         condition: service_healthy
+    healthcheck: # Healthcheck restored
+      test: ["CMD-SHELL", "curl -f http://localhost:8080 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 12
+      start_period: 10s
 
 volumes:
   mongo_data:
