--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    restart: unless-stopped
     healthcheck:
       test:
         ["CMD-SHELL", 'mongosh --eval ''db.adminCommand("ping")'' || exit 1']
